--- a/nfq-test/Cargo.toml
+++ b/nfq-test/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nfq = { git = "https://github.com/nbdd0121/nfq-rs.git" }
+nfq = "*"
