--- a/strongswan.conf
+++ b/strongswan.conf
@@ -1,13 +1,14 @@
 charon {
+  interfaces_use = wlan0 # comma-separated list, helps with source address selection
+  port = 0 # unused
+  port_nat_t = 12500 # should match local_port
   plugins {
+    socket-default {
+      set_source = yes
+      set_sourceif = yes
+    }
     dhcp {
       load = no
-    }
-    socket-default {
-      load = no
-    }
-    socket-dynamic {
-      load = yes
     }
   }
 }
